# autotransformer

./: LICENSE  README.md  pyproject.toml
autotransformer/: __init__.py  auto_transformer.py  text_transformer.py  utils.py
autotransformer/geo/: __init__.py  feature_extractor.py  utils.py
autotransformer/geo/providers/: __init__.py  base.py  centers.py  city_boundary.py  districts.py  industrial.py  intersections.py  metro.py  transport.py
autotransformer/text/: __init__.py  text_transformer.py
