[project]
name = "autotransformer"
version = "0.1.0"
description = ""
authors = [
    {name = "NikshetSteh",email = "stehnikshet@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "pandas (>=2.0.0,<3.0.0)",
    "numpy (>=2.0.0,<3.0.0)",
    "scikit-learn (>=1.5.0,<2.0.0)",
    "joblib (>=1.2.0,<2.0.0)",
    "sentence-transformers (>=5.1.2,<6.0.0)",
    "geopandas (>=1.0.0,<2.0.0)",
    "shapely (>=2.0.0,<3.0.0)",
    "osmnx (>=2.0.0,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
isort = "^7.0.0"
black = "^25.11.0"
pylint = "^4.0.2"

